# projekt-zespol-nr-14

./: .gitignore  CMakeLists.txt  README.md
YellowFlash/: Actions.h  Card.c  Card.h  Cards_In_Hands.c  Cards_In_Hands.h  Combination.h  Dealer.c  Dealer.h  Deck.c  Deck.h  Node.h  Player.c  Player.h  Players.c  Players.h  Suit.h  Table.c  Table.h  Value.h
include/: card.h  player.h  ui.h  winning_check.h
src/: strange_poker.c  ui.c  winning_check.c
uibackends/ncurses/: CMakeLists.txt  ncurses.c
